Changelog for Shake

    #108, add getDirectoryFilesIO, an untracked version
    #401, document getDirectoryFiles exception behaviour
    #401, fix getDirectoryFiles error on pattern directory missing
    #400, detect indirect recursion in build rules
    #402, give better errors on recursive rules
    #369, clarify the docs for putQuiet/putLoud
    #405, make sure phony targets with \ work on Windows
    Require extra-1.4.3
    #398, only require old-time with GHC 7.4
    #239, make Rules an instance of MonadIO
    #384, add shakeExtra field to ShakeOptions for user data
    #374, make --debug=file write out newlines
    #308, make sure Shell and AutoDeps work together
    #365, fix unicode output with putNormal
    #269, add parallel execution via parallel/forP/par
    #310, preserve quoting around cmd
    #333, optimise the random pool, up to 20% faster
    #335, add deriving Read instances for more types
    Add Development.Shake.Forward for forward-defined systems
    #336, export :->
    #337, fix the docs for &%>
    #297, make <enter> run the query profile viewer
    #305, make profiling work with newer Chrome
    #327, Add AutoDeps feature
    #325, add FileStdin to specify the stdin comes from a file
    Make an empty Stdin different from no Stdin (inherit) in cmd
    #320, add ** as an alternative to // in patterns
    #283, change the semantics of removeFiles, no implicit deletes
    #283, speed up getDirectoryFiles on patterns involving literals
    Work with stack test
    Add RemEnv cmd option
    Fix a small space leak on Linux
    Fix a space leak in profile summary information
    Properly handle *//* in file pattern (at least one directory)
    #303, allow ninja rule names to have dots in them
    Properly handle /// in file pattern (a wildcard then /)
    Make sure Windows separators work in |%> FilePattern rules
    #296, fix multifile rules when using --digest-and-input
    #286, document the relationship between getEnv and lookupEnv